# HMM-GestureRecognition

./: CMakeLists.txt  README.md  exampleGesture.json  exampleHMM.json
src/: Gesture.cpp  Gesture.h  GestureLibrary.cpp  GestureLibrary.h  HMM.cpp  HMM.h  main.cpp
src/GUI/: ApplicationExampleWindow.cpp  ApplicationExampleWindow.h  GestureEditor.cpp  GestureEditor.h  GestureEditor.ui  RobotConnectionManager.cpp  RobotConnectionManager.h  RobotConnectionManager.ui  SignLanguageWriter.cpp  SignLanguageWriter.h  SignLanguageWriter.ui  gestureeditor.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/HMMcomponents/: Observable.h  hiddenState.cpp  hiddenState.h  logProbability.cpp  logProbability.h
src/MediapipeInterface/: MediapipeInterface.cpp  MediapipeInterface.h  main.py
src/applications/Robot/: robotcontroller.cpp  robotcontroller.h
src/utils/: MediapipeInterface.cpp  MediapipeInterface.h  collect_data.py  externManager.cpp  get_landmarks.py  run_tcp.py
tests/: deleteThisTest.cpp  evaluatePerformance.cpp  testGesture.json  testHMM.json  testThresholdModel.cpp  tests.cpp
tests/182/: 182.gesturelibrary  eight.json  one.json  two.json
tests/getallen/: getallen.gesturelibrary  one.json  two.json  zero.json
tests/sl/: bedankt.json  demo.json  dit.json  gebarentaal.json  hallo.json  is.json  luisteren.json  om te.json  sl.gesturelibrary  voor.json
utils/: externManager.cpp  externManager.h  get_landmarks.py
